--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "primevue": "^4.5.4",
     "sweetalert2": "^11.26.17",
     "vee-validate": "^4.15.1",
+    "virtua": "^0.48.2",
     "vue": "^3.5.26",
     "vue-i18n": "^9.14.5",
     "vue-loading-template": "^1.3.2",
     "vue-router": "^4.6.3",
     "vue-select": "^4.0.0-beta.6",
+    "vue-virtual-scroller": "^2.0.0-beta.8",
     "yup": "^1.7.1"
   },
   "devDependencies": {
